--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <h1>Point & Click Collection</h1>
-    <a href="engine/index.html?the-swamp">The Swamp</a>
+    <a href=".engine/index.html?the-swamp">The Swamp</a>
     <br>
-    <a href="engine/index.html?dead-end">Dead End</a>
+    <a href=".engine/index.html?bush-st">Bush St</a>
+    <br>
+    <a href=".engine/index.html?summit">Summit</a>
+    <br>
+    <a href=".engine/index.html?stone-st">Stone St</a>
+    <br>
+    <a href=".engine/index.html?dead-end">Dead End</a>
 </body>
