--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         }
     </style>
 </head>
+<script type="text/javascript">
+if (location.hostname === "") {
+    document.title = "." + document.title
+}
+</script>
 <body>
     <h1>Point & Click Collection</h1>
     <a href=".engine/index.html?the-swamp">The Swamp</a>
