--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@ if (location.hostname === "") {
 </script>
 <body>
     <h1>Point & Click Collection</h1>
+
+    <a href=".engine/index.html?dead-end">Dead End</a>
+    <br>
     <a href=".engine/index.html?the-swamp">The Swamp</a>
     <br>
+    <a href=".engine/index.html?griven">Griven</a>
+    <!-- <br>
     <a href=".engine/index.html?bush-st">Bush St</a>
     <br>
     <a href=".engine/index.html?summit">Summit</a>
     <br>
-    <a href=".engine/index.html?stone-st">Stone St</a>
+    <a href=".engine/index.html?stone-st">Stone St</a> -->
     <br>
-    <a href=".engine/index.html?dead-end">Dead End</a>
 </body>
