--- a/engine/engine.html
+++ b/engine/engine.html
@@ -23,7 +23,7 @@
 						<div id="customBoxes"></div>
 					</div>
 				</div>
-				<div id="inventory">
+				<!-- <div id="inventory"> -->
 				<div id="cache">
 			</div>
 		</div>
