--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <head>
-    <title>Point & Click Collection</title>
+    <title>Point & Clicks</title>
     <style type="text/css">
         body {
             text-align: center;
+            background-color: pink;
         }
     </style>
 </head>
 <script type="text/javascript">
-    if (location.hostname === "") {
-        document.title = "." + document.title
-    }
+    if (location.hostname === "") { document.title = "." + document.title }
 </script>
 <body>
-    <h1>Point & Click Collection</h1>
-    <a href="engine/engine.html?dead-end">Dead End</a>
+    <h1>Point & Clicks</h1>
+    <!-- <a href="engine/engine.html?dead-end">Dead End</a> -->
     <br>
     <a href="engine/engine.html?the-swamp">The Swamp</a>
     <br>
-    <a href="engine/engine.html?griven">Griven</a>
-    <br>
     <a href="engine/engine.html?bush-st">Bush St</a>
+    <br>
+    <a href="engine/engine.html?griven">Griven</a>
     <!-- <br>
     <a href="engine/engine.html?summit">Summit</a>
     <br>
     <a href="engine/engine.html?stone-st">Stone St</a>
     <br> -->
+    <br><br><br>
+    <img src ='mouse.gif'>
 </body>
