--- a/engine/engine.html
+++ b/engine/engine.html
@@ -23,8 +23,8 @@
 						<div id="customBoxes"></div>
 					</div>
 				</div>
-				<!-- <div id="inventory"> -->
-				<div id="cache">
+				<div id="inventory"></div>
+				<div id="cache"></div>
 			</div>
 		</div>
 	</body>
