--- a/engine/engine.html
+++ b/engine/engine.html
@@ -9,12 +9,10 @@
 	<body>
 		<div id = "window">
 			<div id = "game">
-				<div id="menu">
+				<div id="menu"></div>
 				<div id="screen">
-					<div id="movies">
-						<img class="gif" id="fullGif"/>
-					</div>
-					<!-- 	<img id="vinette" src="other/vinette.png" /> -->
+					<!-- <img id="vinette" src="other/vinette.png" /> -->
+					<div id="movies"></div>
 					<div id="frame">
 						<img id="img"/>
 						<div id="transitions"></div>
