--- a/engine/engine.html
+++ b/engine/engine.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id = "window">
 			<div id = "game">
-				<div id="menu"></div>
+				<!-- <div id="menu"></div> -->
 				<div id="screen">
 					<!-- <img id="vinette" src="other/vinette.png" /> -->
 					<div id="movies"></div>
