--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Point & Clicks</title>
-    <link rel="icon" type="image/x-icon" href="ico/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style type="text/css">
         body {
             text-align: center;
