--- a/engine/engine.html
+++ b/engine/engine.html
@@ -1,29 +1,26 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<script src="entrypoint.js" type="text/javascript"></script>
-		<link href="engine.css" type="text/css" rel="stylesheet" />
-		<link id="favicon" rel="icon" type="image/x-icon">
-		<style id="style"></style>
-	</head>
-	<body>
-		<div id = "window">
-			<div id = "game">
-				<!-- <div id="menu"></div> -->
-				<div id="screen">
-					<!-- <img id="vinette" src="other/vinette.png" /> -->
-					<div id="movies"></div>
-					<div id="frame">
-						<img id="img"/>
-						<div id="transitions"></div>
-						<div id="pics"></div>
-						<div id="standardBoxes"></div>
-						<div id="customBoxes"></div>
-					</div>
-				</div>
-				<div id="inventory"></div>
-				<div id="cache"></div>
+<!DOCTYPE html><html>
+<head>
+	<script src="entrypoint.js" type="text/javascript"></script>
+	<link href="engine.css" type="text/css" rel="stylesheet" />
+	<link id="favicon" rel="icon" type="image/x-icon">
+	<style id="style"></style>
+</head>
+<body>
+	<div id = "game">
+		<!-- <div id="menu"></div> -->
+		<div id="screen">
+			<!-- <img id="vinette" src="other/vinette.png" /> -->
+			<div id="frame">
+				<div id="movies"></div>
+				<img id="img"/>
+				<div id="transitions"></div>
+				<div id="pics"></div>
+				<div id="standardBoxes"></div>
+				<div id="customBoxes"></div>
 			</div>
 		</div>
-	</body>
+		<div id="inventory"></div>
+		<div id="cache"></div>
+	</div>
+</body>
 </html>
