--- a/engine/engine.html
+++ b/engine/engine.html
@@ -6,21 +6,16 @@
 	<style id="style"></style>
 </head>
 <body>
-	<div id = "game">
-		<!-- <div id="menu"></div> -->
-		<div id="screen">
-			<!-- <img id="vinette" src="other/vinette.png" /> -->
-			<div id="frame">
-				<div id="movies"></div>
-				<img id="img"/>
-				<div id="transitions"></div>
-				<div id="pics"></div>
-				<div id="standardBoxes"></div>
-				<div id="customBoxes"></div>
-			</div>
-		</div>
-		<div id="inventory"></div>
-		<div id="cache"></div>
+	<div id="screen">
+		<div id="movies"></div>
+		<img id="frame"/>
+		<div id="transitions"></div>
+		<div id="pics"></div>
+		<div id="standardBoxes"></div>
+		<div id="customBoxes"></div>
+		<div id="cursorBlock"></div>
 	</div>
+	<div id="inventory"></div>
+	<div id="cache"></div>
 </body>
 </html>
