--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -18,10 +18,12 @@ a { color: white; text-decoration: none; }
 <body>
     <div id="fadeIn">
         <br>
-        <img src="title.png" style="margin: auto; width: 400px;"><h2>Collector's Edition</h2>
+        <img src="title.png" style="margin: auto; width: 400px;">
+        <h2>Remastered Definitive Collectors Edition</h2>
+        <!-- <h2>Mega-Official Newly King's Edition</h2> -->
         <br><img src ="cover.png" style="width: 300px;"><br><br><br>
         <a href="../../engine/engine.html?griven">New Game</a><br><br>
-        <a href="">Save Game</a><br><br>
+        <!-- <a href="">Save Game</a><br><br> -->
         <!-- <a href="">Resume Game</a><br><br> -->
         <!-- <a href="">Load Game</a><br><br> -->
         <a href="">Options</a><br><br>
