--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -19,8 +19,8 @@ a { color: white; text-decoration: none; }
     <div id="fadeIn">
         <br>
         <img src="title.png" style="margin: auto; width: 400px;">
-        <h2>Remastered Definitive Collectors Edition</h2>
-        <!-- <h2>Mega-Official Newly King's Edition</h2> -->
+        <h2><i>R e m a s t e r e d</i></h2>
+        <!-- <h2>Mega-Official, Newly Kosher Edition</h2> -->
         <br><img src ="cover.png" style="width: 300px;"><br><br><br>
         <a href="../../engine/engine.html?griven">New Game</a><br><br>
         <!-- <a href="">Save Game</a><br><br> -->
