--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -5,7 +5,9 @@ body {
     background-color: black;
     text-align: center;
     color: white;
+    font-family: "Brush Script MT"
 }
+
 
 #fadeIn { animation: fadeIn 5s;  }
 
@@ -19,16 +21,16 @@ a { color: white; text-decoration: none; }
     <div id="fadeIn">
         <br>
         <img src="title.png" style="margin: auto; width: 400px;">
-        <h2><i>R e m a s t e r e d</i></h2>
+        <h2><i>F a n c y &nbsp E d i t i on</i></h2>
         <!-- <h2>Mega-Official, Newly Kosher Edition</h2> -->
-        <br><img src ="cover.png" style="width: 300px;"><br><br><br>
-        <a href="../../engine/engine.html?griven">New Game</a><br><br>
+        <br><img src ="cover.png" style="width: 300px;"><br><br>
+        <h2><a href="../../engine/engine.html?griven">New Game</a></h2><br><br>
         <!-- <a href="">Save Game</a><br><br> -->
         <!-- <a href="">Resume Game</a><br><br> -->
         <!-- <a href="">Load Game</a><br><br> -->
-        <a href="">Options</a><br><br>
+        <!-- <a href="">Options</a><br><br> -->
         <!-- Full Music mode vs original, volume, classic cursor -->
-        <a href="">Bonus</a><br><br>
+        <!-- <a href="">Bonus</a><br><br> -->
         <!-- About, Test Renders, Play 'flat', Original Version, Credits -->
     </div>
 </body>
