--- a/engine/engine.html
+++ b/engine/engine.html
@@ -6,16 +6,19 @@
 	<style id="style"></style>
 </head>
 <body>
-	<div id="screen">
-		<div id="movies"></div>
-		<img id="frame"/>
-		<div id="transitions"></div>
-		<div id="pics"></div>
-		<div id="standardBoxes"></div>
-		<div id="customBoxes"></div>
-		<div id="cursorBlock"></div>
+	<div id="window">
+		<div id="screen">
+			<div id="movies"></div>
+			<img id="frame"/>
+			<div id="transitions"></div>
+			<div id="pics"></div>
+			<div id="standardBoxes"></div>
+			<div id="customBoxes"></div>
+			<div id="cursorBlock"></div>
+		</div>
+		<div id="inventory"></div>
+		<div id="cache"></div>
 	</div>
-	<div id="inventory"></div>
-	<div id="cache"></div>
+	
 </body>
 </html>
