--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -29,7 +29,11 @@ a { color: white; text-decoration: none; }
         <!-- <a href="">Resume Game</a><br><br> -->
         <!-- <a href="">Load Game</a><br><br> -->
         <!-- <a href="">Options</a><br><br> -->
-        <!-- Full Music mode vs original, volume, classic cursor -->
+        <!-- 
+          Volume,
+          Cursor: Original / Fancy, 
+          Music: Original / Fancy / Off,
+        -->
         <!-- <a href="">Bonus</a><br><br> -->
         <!-- About, Test Renders, Play 'flat', Original Version, Credits -->
     </div>
