--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -7,14 +7,9 @@ body {
     color: white;
     font-family: "Brush Script MT"
 }
-
-
 #fadeIn { animation: fadeIn 5s;  }
-
 @keyframes fadeIn { 0% { opacity: 0 } 100% { opacity: 1 }}
-
-a { color: white; text-decoration: none; }
-
+a { color: white; text-decoration: none }
 </style>
 </head>
 <body>
