--- a/engine/engine.html
+++ b/engine/engine.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html><html>
 <head>
-	<script src="entrypoint.js" type="text/javascript"></script>
-	<link href="engine.css" type="text/css" rel="stylesheet" />
-	<link id="favicon" rel="icon" type="image/x-icon">
-	<style id="style"></style>
+<script src="entrypoint.js" type="text/javascript"></script>
+<link id="favicon" rel="icon" type="image/x-icon">
+<style id="style"></style>
+<style>
+body { background-color: black; /* user-drag: none;  */
+	user-select: none; }
+
+#screen { display: flex;  position: absolute; top: 50%; left: 50%; margin-top: -425px; margin-left: -475px;  overflow: hidden;
+	/* border: 1px yellow solid; */}
+
+#inventory { position: relative; margin:0;  width: 100px; height: 750px;
+	/* border: 1px orange solid; */}
+
+#transitions { position: absolute; width: 100%; height: 100%; z-index: 5; }
+
+#cursorBlock { position: absolute; width: 100%; height: 100%; visibility: hidden; z-index: 100; }
+
+.transition { position: absolute; width: 100%; height: 100%; }
+
+#frame { position: relative; width: 100%; height: 100%; z-index: 0;	}
+
+.box { z-index: 10; position: absolute;
+	/* border: 1px lightskyblue solid; */ }
+
+.picBox { position: absolute; left: 0px; top: 0px; z-index: 4;
+	/* border: 1px palevioletred solid; */
+}
+
+.full { width: 100%; height: 100% }
+
+.fullHeight { width: auto; height: 100% }
+
+.fullGif { position: absolute; width: 100%; height: 100%; z-index: 6 }
+
+.inventory { left: 0px; top: 0px; position: relative; width: 100px; height: 100px }
+
+.inventory img { position: absolute; width: 100%; height: 100%; z-index: 6 }
+
+#cache img { width: 1px; height: 1px; opacity: 0; }
+
+.leftCursor { cursor: url(assets/cursors/left.png), auto; } 
+.rightCursor { cursor: url(assets/cursors/right.png), auto; } 
+.forwardCursor { cursor: url(assets/cursors/forward.png), auto; } 
+.backCursor { cursor: url(assets/cursors/back.png), auto; } 
+.zoomCursor { cursor: cell; } 
+.interactCursor { cursor: pointer; } 
+.closedCursor { cursor: url(assets/cursors/closed.png), auto; } 
+.openCursor { cursor: url(assets/cursors/open.png), auto; } 
+.defaultCursor { cursor: default; }
+
+/* #myvideo:-webkit-full-screen { width: 100%; height: 100%; } */
+</style>
 </head>
 <body>
-	<div id="window">
+	<!-- <div id="window"> -->
 		<div id="screen">
 			<div id="movies"></div>
 			<img id="frame"/>
@@ -18,7 +66,6 @@
 		</div>
 		<div id="inventory"></div>
 		<div id="cache"></div>
-	</div>
-	
+	<!-- </div> -->
 </body>
 </html>
