--- a/engine/engine.html
+++ b/engine/engine.html
@@ -4,57 +4,36 @@
 <link id="favicon" rel="icon" type="image/x-icon">
 <style id="style"></style>
 <style>
-body { background-color: black; /* user-drag: none;  */
-	user-select: none; }
+body { background-color: black; /* user-drag: none; */ user-select: none; }
 
-#screen { display: flex;  position: absolute; top: 50%; left: 50%; margin-top: -425px; margin-left: -475px;  overflow: hidden;
-	/* border: 1px yellow solid; */}
-
-#inventory { position: relative; margin:0;  width: 100px; height: 750px;
-	/* border: 1px orange solid; */}
-
-#transitions { position: absolute; width: 100%; height: 100%; z-index: 5; }
-
-#cursorBlock { position: absolute; width: 100%; height: 100%; visibility: hidden; z-index: 100; }
-
-.transition { position: absolute; width: 100%; height: 100%; }
-
+#all { position: relative; margin: auto; }
+#screen { position: absolute; display: flex; overflow: hidden; }
 #frame { position: relative; width: 100%; height: 100%; z-index: 0;	}
-
-.box { z-index: 10; position: absolute;
-	/* border: 1px lightskyblue solid; */ }
-
-.picBox { position: absolute; left: 0px; top: 0px; z-index: 4;
-	/* border: 1px palevioletred solid; */
+#transitions { position: absolute; width: 100%; height: 100%; z-index: 5; }
+.transition { position: absolute; width: 100%; height: 100%; }
+#cursorBlock { position: absolute; width: 100%; height: 100%; visibility: hidden; z-index: 11; }
+#inventory { position: absolute; display: block; bottom: 0; width: 100%; height: 100px; 
+	/* border: 1px orange solid;  */
 }
+.inventory { position: relative; margin: 10px; display: inline-block; z-index: 12;
+	/* border: 1px red solid; */
+	img { width: 100%; z-index: 12; display: block; 
+		/* border: 1px yellow solid; */
+}}
 
+.box { position: absolute; z-index: 10;
+	/* border: 1px blue solid; */
+}
+.pic { position: absolute; left: 0px; top: 0px; z-index: 4; }
 .full { width: 100%; height: 100% }
-
-.fullHeight { width: auto; height: 100% }
-
 .fullGif { position: absolute; width: 100%; height: 100%; z-index: 6 }
-
-.inventory { left: 0px; top: 0px; position: relative; width: 100px; height: 100px }
-
-.inventory img { position: absolute; width: 100%; height: 100%; z-index: 6 }
-
 #cache img { width: 1px; height: 1px; opacity: 0; }
-
-.leftCursor { cursor: url(assets/cursors/left.png), auto; } 
-.rightCursor { cursor: url(assets/cursors/right.png), auto; } 
-.forwardCursor { cursor: url(assets/cursors/forward.png), auto; } 
-.backCursor { cursor: url(assets/cursors/back.png), auto; } 
-.zoomCursor { cursor: cell; } 
-.interactCursor { cursor: pointer; } 
-.closedCursor { cursor: url(assets/cursors/closed.png), auto; } 
-.openCursor { cursor: url(assets/cursors/open.png), auto; } 
-.defaultCursor { cursor: default; }
 
 /* #myvideo:-webkit-full-screen { width: 100%; height: 100%; } */
 </style>
 </head>
-<body>
-	<!-- <div id="window"> -->
+<body><br>
+	<div id="all">
 		<div id="screen">
 			<div id="movies"></div>
 			<img id="frame"/>
@@ -66,6 +45,6 @@ body { background-color: black; /* user-drag: none;  */
 		</div>
 		<div id="inventory"></div>
 		<div id="cache"></div>
-	<!-- </div> -->
+	</div>
 </body>
 </html>
