--- a/engine/engine.html
+++ b/engine/engine.html
@@ -10,8 +10,10 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 #screen { position: absolute; display: flex; overflow: hidden; }
 #frame { position: relative; width: 100%; height: 100%; z-index: 0;	}
 #transitions { position: absolute; width: 100%; height: 100%; z-index: 5; }
-.transition { position: absolute; width: 100%; height: 100%; }
+.transition { position: absolute; width: 100%; height: 100%; opacity: 1}
 #cursorBlock { position: absolute; width: 100%; height: 100%; visibility: hidden; z-index: 11; }
+
+#persistents { z-index: 6; }
 #inventory { position: absolute; display: block; bottom: 0; width: 100%; height: 100px; 
 	/* border: 1px orange solid;  */
 }
@@ -35,6 +37,7 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 <body><br>
 	<div id="all">
 		<div id="screen">
+			<div id="persistents"></div>
 			<div id="movies"></div>
 			<img id="frame"/>
 			<div id="transitions"></div>
