--- a/engine/engine.html
+++ b/engine/engine.html
@@ -24,7 +24,7 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 }}
 
 .box { position: absolute; z-index: 10;
-	/* border: 1px blue solid; */
+	border: 1px blue solid;
 }
 .pic { position: absolute; left: 0px; top: 0px; z-index: 4; }
 .full { width: 100%; height: 100% }
