--- a/engine/engine.html
+++ b/engine/engine.html
@@ -12,7 +12,6 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 #transitions { position: absolute; width: 100%; height: 100%; z-index: 5; }
 .transition { position: absolute; width: 100%; height: 100%; opacity: 1}
 #cursorBlock { position: absolute; width: 100%; height: 100%; visibility: hidden; z-index: 11; }
-
 #persistents { z-index: 6; }
 #inventory { position: absolute; display: block; bottom: 0; width: 100%; height: 100px; 
 	/* border: 1px orange solid;  */
@@ -24,7 +23,7 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 }}
 
 .box { position: absolute; z-index: 10;
-	border: 1px blue solid;
+	/* border: 1px blue solid; */
 }
 .pic { position: absolute; left: 0px; top: 0px; z-index: 4; }
 .full { width: 100%; height: 100% }
@@ -34,7 +33,7 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 /* #myvideo:-webkit-full-screen { width: 100%; height: 100%; } */
 </style>
 </head>
-<body><br>
+<body><br><br><br><br><br><br><br>
 	<div id="all">
 		<div id="screen">
 			<div id="persistents"></div>
