--- a/engine/engine.html
+++ b/engine/engine.html
@@ -25,6 +25,8 @@ body { background-color: black; /* user-drag: none; */ user-select: none; }
 .box { position: absolute; z-index: 10;
 	/* border: 1px blue solid; */
 }
+
+#movies { z-index: 6; }
 .pic { position: absolute; left: 0px; top: 0px; z-index: 4; }
 .full { width: 100%; height: 100% }
 .fullGif { position: absolute; width: 100%; height: 100%; z-index: 6 }
