--- a/engine/engine.html
+++ b/engine/engine.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
 <head>
 <script src="entrypoint.js" type="text/javascript"></script>
 <link id="favicon" rel="icon" type="image/x-icon">
@@ -51,4 +51,3 @@
 		<div id="cache"></div>
 	</div>
 </body>
-</html>
