--- a/engine/engine.html
+++ b/engine/engine.html
@@ -23,7 +23,7 @@
 	}}
 
 	.box { position: absolute; z-index: 10;
-		border: 1px orangered solid;
+		/* border: 1px orangered solid; */
 	}
 
 	#movies { z-index: 6; }
