remove standard boxes

--- a/engine/engine.html
+++ b/engine/engine.html
@@ -12,8 +12,7 @@
 			<img id="frame"/>
 			<div id="transitions"></div>
 			<div id="pics"></div>
-			<div id="standardBoxes"></div>
-			<div id="customBoxes"></div>
+			<div id="boxes"></div>
 			<div id="cursorBlock"></div>
 		</div>
 		<div id="inventory"></div>
