--- a/engine/engine.html
+++ b/engine/engine.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
-	<script src="start.js" type="text/javascript"></script>
 	<link id="favicon" rel="icon" type="image/x-icon">
 	<style id="style"></style>
+	<link rel="stylesheet" href="baseStyle.css">
+	<script src="start.js" type="text/javascript"></script>
 </head>
 <body><br><br><br><br>
 	<div id="all">
