--- a/index.html
+++ b/index.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
 <head>
-    <title>Point & Clicks</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>Nabanagrams</title>
+	<meta http-equiv="refresh" content="0; url=Point-and-Clicks.html" />
     <style type="text/css">
         body {
-            text-align: center;
             background-color: pink;
+            text-align: center;
+            animation: fadeIn 3s;
         }
+
+        @keyframes fadeIn { 0% { opacity: 0 } 100% { opacity: 1 }}
+
+        a { color: gray; }
     </style>
 </head>
-<script type="text/javascript">
-    if (location.hostname === "") { document.title = "." + document.title }
-</script>
 <body>
-    <h1>Point & Clicks</h1>
-    <!-- <a href="engine/engine.html?dead-end">Dead End</a> -->
-    <br>
-    <a href="engine/engine.html?bush-st">Bush St</a>
-    <br>
-    <a href="engine/engine.html?summit-ave">Summit Ave</a>
-    <br>
-    <a href="engine/engine.html?stone-st">Stone St</a>
-    <br>
-    <a href="engine/engine.html?the-swamp">The Swamp</a>
-    <br>
-    <a href="engine/engine.html?griven">Griven</a>
-    <br>
-    <a href="engine/engine.html?grounded">Grounded</a>
-    <br><br><br>
-    <img src ='mouse.gif'>
+	<br><br><br>
+	<p><a href="http://bencelsi.github.io/nabanagrams/Point-and-Clicks.html">(Point and Clicks: click here if not redirected)</a></p>
 </body>
