--- a/Point-and-Clicks.html
+++ b/Point-and-Clicks.html
@@ -16,19 +16,19 @@
     <h1>Point & Clicks</h1>
     <!-- <a href="engine/engine.html?dead-end">Dead End</a> -->
     <br>
-    <a href="engine/engine.html?bush-st">Bush St</a>
+    <a href="engine/engine.html?game=bush-st">Bush St</a>
     <br>
-    <a href="engine/engine.html?summit-ave">Summit Ave</a>
+    <a href="engine/engine.html?game=summit-ave">Summit Ave</a>
     <br>
-    <a href="engine/engine.html?stone-st">Stone St</a>
+    <a href="engine/engine.html?game=stone-st">Stone St</a>
     <br>
-    <a href="engine/engine.html?the-swamp">The Swamp</a>
+    <a href="engine/engine.html?game=the-swamp">The Swamp</a>
     <br><br>
     • • •
     <br><br>
-    <a href="engine/engine.html?griven">Griven</a>
+    <a href="engine/engine.html?game=griven">Griven</a>
     <br>
-    <a href="engine/engine.html?grounded">Grounded</a>
+    <a href="engine/engine.html?game=grounded">Grounded</a>
     <br><br><br>
     <img src ='mouse.gif'>
 </body>
