--- a/Point-and-Clicks.html
+++ b/Point-and-Clicks.html
@@ -4,31 +4,26 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style type="text/css">
         body {
+            font-family: "Lucida Console", monospace;
             text-align: center;
             background-color: pink;
         }
     </style>
 </head>
 <script type="text/javascript">
-    if (location.hostname === "") { document.title = "." + document.title }
+    if (location.hostname == "") document.title = "." + document.title
 </script>
 <body>
     <h1>Point & Clicks</h1>
-    <!-- <a href="engine/engine.html?dead-end">Dead End</a> -->
-    <br>
-    <a href="engine/engine.html?game=bush-st">Bush St</a>
-    <br>
-    <a href="engine/engine.html?game=summit-ave">Summit Ave</a>
-    <br>
-    <a href="engine/engine.html?game=stone-st">Stone St</a>
-    <br>
-    <a href="engine/engine.html?game=the-swamp">The Swamp</a>
-    <br><br>
+    <!-- <a href="engine/engine.html?dead-end">Dead End</a><br> -->
+    <!-- <a href="engine/engine.html?game=griven">Griven</a><br> -->
+    <a href="engine/engine.html?game=grounded">Grounded</a><br>
     • • •
-    <br><br>
-    <a href="engine/engine.html?game=griven">Griven</a>
     <br>
-    <a href="engine/engine.html?game=grounded">Grounded</a>
-    <br><br><br>
+    <a href="engine/engine.html?game=bush-st">Bush St</a><br>
+    <a href="engine/engine.html?game=summit-ave">Summit Ave</a><br>
+    <a href="engine/engine.html?game=stone-st">Stone St</a><br>
+    <a href="engine/engine.html?game=the-swamp">The Swamp</a><br>
+    <br>
     <img src ='mouse.gif'>
 </body>
