--- a/engine/engine.html
+++ b/engine/engine.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <head>
-	<link id="favicon" rel="icon" type="image/x-icon">
-	<style id="style"></style>
-	<link rel="stylesheet" href="baseStyle.css">
-	<script src="start.js" type="text/javascript"></script>
+	<link id='favicon' rel='icon' type='image/x-icon'>
+	<style id='style'></style>
+	<link rel='stylesheet' href='baseStyle.css'>
+	<script src='start.js' type='text/javascript'></script>
 </head>
 <body><br><br><br><br>
-	<div id="all">
-		<div id="screen">
-			<div id="persistents"></div>
-			<div id="movies"></div>
-			<img id="frame"/>
-			<div id="transitions"></div>
-			<div id="pics"></div>
-			<div id="boxes"></div>
-			<div id="cursorBlock"></div>
+	<div id='all'>
+		<div id='screen'>
+			<div id='persistents'></div>
+			<div id='movies'></div>
+			<img id='frame'/>
+			<div id='transitions'></div>
+			<div id='pics'></div>
+			<div id='boxes'></div>
+			<div id='cursorBlock'></div>
 		</div>
-		<div id="inventory"></div>
-		<div id="cache"></div>
+		<div id='inventory'></div>
+		<div id='cache'></div>
 	</div>
 </body>
