--- a/engine/engine.html
+++ b/engine/engine.html
@@ -19,4 +19,9 @@
 		<div id='inventory'></div>
 		<div id='cache'></div>
 	</div>
+	<form method="post" enctype="multipart/form-data">
+		<label for="file">File</label>
+		<input id="file" name="file" type="file" />
+		<button>Upload</button>
+	  </form>	  
 </body>
