--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -17,10 +17,10 @@
 <body>
     <div id="fadeIn">
         <br>
-        <img src="title.png" style="margin: auto; width: 400px;">
+        <img src="assets/title.png" style="margin: auto; width: 400px;">
         <h2><i>F a n c y &nbsp E d i t i on</i></h2>
         <!-- <h2>Mega-Official, Newly Kosher Edition</h2> -->
-        <br><img src ="cover.png" style="width: 300px;"><br><br>
+        <br><img src ="assets/cover.png" style="width: 300px;"><br><br>
         <h2><a href="../../engine/engine.html?griven">New Game</a></h2><br><br>
         <!-- <a href="">Save Game</a><br><br> -->
         <!-- <a href="">Resume Game</a><br><br> -->
