--- a/Point-and-Clicks.html
+++ b/Point-and-Clicks.html
@@ -17,8 +17,7 @@
     <h1>Point & Clicks</h1>
     <!-- <a href="engine/engine.html?dead-end">Dead End</a><br> -->
     <!-- <a href="engine/engine.html?game=griven">Griven</a><br> -->
-    <a href="engine/engine.html?game=grounded">Grounded</a><br>
-    • • •
+    <!-- <a href="engine/engine.html?game=grounded">Grounded</a><br> -->
     <br>
     <a href="engine/engine.html?game=bush-st">Bush St</a><br>
     <a href="engine/engine.html?game=summit-ave">Summit Ave</a><br>
