--- a/Point-and-Clicks.html
+++ b/Point-and-Clicks.html
@@ -19,6 +19,7 @@
     <!-- <a href="engine/engine.html?game=griven">Griven</a><br> -->
     <!-- <a href="engine/engine.html?game=grounded">Grounded</a><br> -->
     <br>
+    <a href="engine/engine.html?game=music-room">Music Room</a><br>
     <a href="engine/engine.html?game=bush-st">Bush St</a><br>
     <a href="engine/engine.html?game=summit-ave">Summit Ave</a><br>
     <a href="engine/engine.html?game=stone-st">Stone St</a><br>
