--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <title>Nabanagrams</title>
-	<meta http-equiv="refresh" content="0; url=Point-and-Clicks.html" />
+	<meta http-equiv="refresh" content="0; url=point-and-clicks.html" />
     <style type="text/css">
         body {
             background-color: pink;
@@ -15,5 +15,5 @@
 </head>
 <body>
 	<br><br><br>
-	<p><a href="http://bencelsi.github.io/nabanagrams/Point-and-Clicks.html">(Point and Clicks: click here if not redirected)</a></p>
+	<p><a href="http://bencelsi.github.io/nabanagrams/point-and-clicks.html">(Point and Clicks: click here if not redirected)</a></p>
 </body>
