--- a/point-and-clicks.html
+++ b/point-and-clicks.html
@@ -16,8 +16,8 @@
 <body>
     <h1>Point & Clicks</h1>
     <!-- <a href="engine/engine.html?dead-end">Dead End</a><br> -->
-    <!-- <a href="engine/engine.html?game=griven">Griven</a><br> -->
-    <!-- <a href="engine/engine.html?game=grounded">Grounded</a><br> -->
+    <a href="engine/engine.html?game=griven">Griven (Open World Version)</a><br>
+    <a href="engine/engine.html?game=grounded">Grounded (New Version)</a><br>
     <br>
     <a href="engine/engine.html?game=music-room">Music Room</a><br>
     <a href="engine/engine.html?game=bush-st">Bush St</a><br>
