--- a/games/griven/grivenMenu.html
+++ b/games/griven/grivenMenu.html
@@ -17,11 +17,13 @@
 <body>
     <div id="fadeIn">
         <br>
-        <img src="assets/title.png" style="margin: auto; width: 400px;">
+        <!-- <img src="assets/title.png" style="margin: auto; width: 400px;"> -->
+        <h1>G R I V E N</h1>
         <h2><i>F a n c y &nbsp E d i t i on</i></h2>
         <!-- <h2>Mega-Official, Newly Kosher Edition</h2> -->
-        <br><img src ="assets/cover.png" style="width: 300px;"><br><br>
-        <h2><a href="../../engine/engine.html?griven">New Game</a></h2><br><br>
+        <br>
+        <br>
+        <h2><a href="../../engine/engine.html?game=griven">New Game</a></h2><br><br>
         <!-- <a href="">Save Game</a><br><br> -->
         <!-- <a href="">Resume Game</a><br><br> -->
         <!-- <a href="">Load Game</a><br><br> -->
