--- a/point-and-clicks.html
+++ b/point-and-clicks.html
@@ -16,14 +16,16 @@
 <body>
     <h1>Point & Clicks</h1>
     <!-- <a href="engine/engine.html?dead-end">Dead End</a><br> -->
-    <a href="engine/engine.html?game=griven">Griven (Open World Version)</a><br>
-    <a href="engine/engine.html?game=grounded">Grounded (New Version)</a><br>
+    
     <br>
     <a href="engine/engine.html?game=music-room">Music Room</a><br>
     <a href="engine/engine.html?game=bush-st">Bush St</a><br>
     <a href="engine/engine.html?game=summit-ave">Summit Ave</a><br>
     <a href="engine/engine.html?game=stone-st">Stone St</a><br>
     <a href="engine/engine.html?game=the-swamp">The Swamp</a><br>
+    <br>
+    <a href="engine/engine.html?game=griven&file=griven-open">Griven (Home Tour Version)</a><br>
+    <a href="engine/engine.html?game=grounded">Grounded (Fancy Version)</a><br>
     <br>
     <img src ='mouse.gif'>
 </body>
